--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,11 +9,12 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">53,657</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">74,689</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">tests.RZDTrainTests</td><td><a href="#m0">searchTicketsActual</a></td><td rowspan="1">1710278212714</td><td rowspan="1">34520</td></tr><tr class="passedeven"><td><a href="#m1">searchTicketsJune</a></td><td rowspan="1">1710278249433</td><td rowspan="1">11772</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">tests.RZDTrainTests</td><td><a href="#m0">searchTicketsJune</a></td><td rowspan="1">1710937694198</td><td rowspan="1">17587</td></tr><tr class="passedeven"><td><a href="#m1">searchTicketsJuneDirectionBack</a></td><td rowspan="1">1710937715264</td><td rowspan="1">12682</td></tr><tr class="passedeven"><td><a href="#m2">searchTicketsJuneOneDirectionA</a></td><td rowspan="1">1710937731584</td><td rowspan="1">32664</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">tests.RZDTrainTests#searchTicketsActual</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">tests.RZDTrainTests#searchTicketsJune</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">tests.RZDTrainTests#searchTicketsJune</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">tests.RZDTrainTests#searchTicketsJuneDirectionBack</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">tests.RZDTrainTests#searchTicketsJuneOneDirectionA</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
