--- a/test-output/index.html
+++ b/test-output/index.html
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">2 methods,   2 passed</span>
+                    <span class="method-stats">3 methods,   3 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -103,12 +103,17 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="tests.RZDTrainTests" class="method navigator-link" hash-for-method="searchTicketsActual">searchTicketsActual</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="tests.RZDTrainTests" class="method navigator-link" hash-for-method="searchTicketsJune">searchTicketsJune</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="tests.RZDTrainTests" class="method navigator-link" hash-for-method="searchTicketsJune">searchTicketsJune</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="tests.RZDTrainTests" class="method navigator-link" hash-for-method="searchTicketsJuneDirectionBack">searchTicketsJuneDirectionBack</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="tests.RZDTrainTests" class="method navigator-link" hash-for-method="searchTicketsJuneOneDirectionA">searchTicketsJuneOneDirectionA</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -131,16 +136,23 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="searchTicketsActual">
-                  </a> <!-- searchTicketsActual -->
-                  <span class="method-name">searchTicketsActual</span>
+                  <a name="searchTicketsJune">
+                  </a> <!-- searchTicketsJune -->
+                  <span class="method-name">searchTicketsJune</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="searchTicketsJune">
-                  </a> <!-- searchTicketsJune -->
-                  <span class="method-name">searchTicketsJune</span>
+                  <a name="searchTicketsJuneDirectionBack">
+                  </a> <!-- searchTicketsJuneDirectionBack -->
+                  <span class="method-name">searchTicketsJuneDirectionBack</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="searchTicketsJuneOneDirectionA">
+                  </a> <!-- searchTicketsJuneOneDirectionA -->
+                  <span class="method-name">searchTicketsJuneOneDirectionA</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -148,7 +160,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">/private/var/folders/05/ns6jtq4x0h16j0thcq9qjw500000gn/T/testng-eclipse-1643807369/testng-customsuite.xml</span>
+            <span class="header-content">/private/var/folders/05/ns6jtq4x0h16j0thcq9qjw500000gn/T/testng-eclipse-1193758371/testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -197,20 +209,24 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(2);
+data.addRows(3);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'searchTicketsActual')
+data.setCell(0, 1, 'searchTicketsJuneOneDirectionA')
 data.setCell(0, 2, 'tests.RZDTrainTests')
-data.setCell(0, 3, 34520);
+data.setCell(0, 3, 32664);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'searchTicketsJune')
 data.setCell(1, 2, 'tests.RZDTrainTests')
-data.setCell(1, 3, 11772);
+data.setCell(1, 3, 17587);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'searchTicketsJuneDirectionBack')
+data.setCell(2, 2, 'tests.RZDTrainTests')
+data.setCell(2, 3, 12682);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 46 seconds</span>
+              <span class="suite-total-time">Total running time: 1 minutes</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -242,16 +258,24 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">searchTicketsActual</span>
-                <span class="method-start">5127 ms</span>
+                <span class="method-name">searchTicketsJune</span>
+                <span class="method-start">4587 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method before">
                 <span class="method-name">launchApplication</span>
-                <span class="method-start">39651 ms</span>
+                <span class="method-start">22179 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">searchTicketsJune</span>
-                <span class="method-start">41846 ms</span>
+                <span class="method-name">searchTicketsJuneDirectionBack</span>
+                <span class="method-start">25653 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method before">
+                <span class="method-name">launchApplication</span>
+                <span class="method-start">38338 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">searchTicketsJuneOneDirectionA</span>
+                <span class="method-start">41973 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
