--- a/test-output/index.html
+++ b/test-output/index.html
@@ -160,7 +160,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">/private/var/folders/05/ns6jtq4x0h16j0thcq9qjw500000gn/T/testng-eclipse-1193758371/testng-customsuite.xml</span>
+            <span class="header-content">/private/var/folders/05/ns6jtq4x0h16j0thcq9qjw500000gn/T/testng-eclipse--43346057/testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -213,15 +213,15 @@ data.addRows(3);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'searchTicketsJuneOneDirectionA')
 data.setCell(0, 2, 'tests.RZDTrainTests')
-data.setCell(0, 3, 32664);
+data.setCell(0, 3, 31969);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'searchTicketsJune')
 data.setCell(1, 2, 'tests.RZDTrainTests')
-data.setCell(1, 3, 17587);
+data.setCell(1, 3, 15032);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'searchTicketsJuneDirectionBack')
 data.setCell(2, 2, 'tests.RZDTrainTests')
-data.setCell(2, 3, 12682);
+data.setCell(2, 3, 14515);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
@@ -259,24 +259,36 @@ return data;
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">searchTicketsJune</span>
-                <span class="method-start">4587 ms</span>
+                <span class="method-start">4731 ms</span>
               </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">closeBrowser</span>
+                <span class="method-start">19766 ms</span>
+              </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">launchApplication</span>
-                <span class="method-start">22179 ms</span>
+                <span class="method-start">21829 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">searchTicketsJuneDirectionBack</span>
-                <span class="method-start">25653 ms</span>
+                <span class="method-start">24237 ms</span>
               </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">closeBrowser</span>
+                <span class="method-start">38754 ms</span>
+              </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">launchApplication</span>
-                <span class="method-start">38338 ms</span>
+                <span class="method-start">40816 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">searchTicketsJuneOneDirectionA</span>
-                <span class="method-start">41973 ms</span>
+                <span class="method-start">43176 ms</span>
               </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">closeBrowser</span>
+                <span class="method-start">75147 ms</span>
+              </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
